added mass input, fixed reset and others